# capsulet

./: .dockerignore  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile.dashboard  Dockerfile.rust  README.md  ROADMAP.md  compose.e2e.yaml  compose.yaml  deny.toml  skills-lock.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dashboard.yml  helm.yml  rust.yml  supply-chain.yml  wasm-python-integration.yml
charts/capsulet/: Chart.yaml  values.schema.json  values.yaml
crates/: Dockerfile  README.md
crates/api/: Cargo.toml  openapi.json
crates/api/src/: auth.rs  automations.rs  error.rs  graphs.rs  http.rs  ingestion.rs  lib.rs  main.rs  memory.rs  models.rs  runtime.rs  state.rs  store.rs  tests.rs  webhooks.rs
crates/api/src/http/: internal.rs
crates/application/: Cargo.toml
crates/application/src/: agent_runtime.rs  agents.rs  commands.rs  execution.rs  graphs.rs  lib.rs  ports.rs
crates/application/tests/: agent_runtime.rs  agents.rs  contracts.rs  execution_contracts.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: component.rs  lib.rs
crates/core/src/application/: mod.rs
crates/core/src/domain/: agent.rs  artifact.rs  automation.rs  execution_pool.rs  graph.rs  ids.rs  ingestion.rs  job.rs  job_definition.rs  job_log.rs  memory.rs  memory_contract.rs  memory_graph.rs  mod.rs  parse.rs  workflow.rs  workflow_graph.rs
crates/core/src/ports/: mod.rs
crates/core/tests/: ingestion.rs  memory_contract_dsl.rs  memory_core.rs  nested_memory_graphs.rs  typed_hypergraph.rs
crates/evaluator/: Cargo.toml
crates/evaluator/src/: custom_trigger.rs  lib.rs  main.rs  runtime.rs  schedule.rs  service.rs  sql_trigger.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/postgres/: Cargo.toml
crates/postgres/src/: agents.rs  artifacts.rs  audit.rs  automations.rs  graphs.rs  ingestion.rs  job_definitions.rs  job_runs.rs  lib.rs  memory.rs  metrics.rs  projects.rs  repositories.rs  retention.rs  rows.rs  service_accounts.rs  tests.rs  trigger_events.rs  worker_store.rs  workflow_runs.rs  workflows.rs
crates/runner/: Cargo.toml
crates/runner/src/: internal.rs  lib.rs  main.rs  tests.rs
crates/runner/tests/: module_boundaries.rs  wasm_python_runner.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  main.rs  service.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  object_store.rs
crates/worker/: Cargo.toml
crates/worker/src/: lib.rs  main.rs  runtime.rs  tests.rs  worker.rs
dashboard/: .dockerignore  Dockerfile  README.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  tailwind.config.ts  tsconfig.tsbuildinfo
dashboard/app/: components.tsx  globals.css  layout.tsx  mock-data.ts  page.tsx
dashboard/tests/: api.test.ts
deploy/keycloak/: capsulet-realm.json
deploy/observability/: grafana-dashboard.json  grafana-dashboards.yml  prometheus-compose.yml  prometheus-rules-compose.yml  prometheus-rules.yaml
docs/: README.md  api.md  architecture.md  dashboard-streaming.md  development.md  helm-values.md  installation.md  local-kubernetes-runner.md  minikube-smoke.md  operations.md  persistence.md  security.md  troubleshooting.md  worker-runner.md
docs/adr/: 0001-record-architecture-decisions.md  0002-rust-workspace-and-core-boundaries.md  0003-nextjs-dashboard-prototype.md  0004-helm-first-distribution.md  0005-object-storage-for-bundles-logs-artifacts.md  0006-kafka-as-target-event-channel.md  0007-postgresql-and-sqlx-persistence.md  0008-axum-for-http-api.md  0009-runner-boundary-and-stub-runner.md  0010-log-storage-boundary.md  0011-tenancy-model.md
docs/design/: authoring-workflow-mvp.md  host-groups-and-triggers.md  mvp-implementation-plan.md  workflow-dag-graph-plan.md
docs/memory-contracts/: engineering.contract  legal.contract  project-management.contract  support.contract
docs/operations/: backup-restore-dr.md  observability.md
docs/security/: secrets-rotation.md
examples/send-email/: README.md  send_email.py
examples/workflows/: README.md  csv_pipeline.py
migrations/: 20260529170000_initial_persistence.sql  20260602190000_job_run_logs.sql  20260602210000_job_control_and_recovery.sql  20260605100000_job_artifacts.sql  20260606150000_workflows_and_automations.sql  20260613090000_automation_triggers_and_plugins.sql  20260613110000_contract_inputs.sql  20260614143000_workflow_run_removal.sql  20260618120000_workflow_step_dependencies.sql  20260619090000_job_heartbeats.sql  20260622100000_trigger_events.sql  20260622103000_trigger_runtime.sql  20260622110000_audit_events.sql  20260622111000_retention_cleanups.sql  20260622112000_custom_trigger_runtime.sql  20260622113000_trigger_runtime_status.sql  20260623173000_workflow_run_snapshots.sql  20260623174500_workflow_policies_and_timeouts.sql  20260623190000_job_definition_python_dependencies.sql  20260623200000_tenants_and_service_accounts.sql  20260624120000_project_memberships.sql  20260624160000_project_resource_scope.sql  20260624170000_trigger_first_automations.sql  20260702120000_typed_graphs_and_agents.sql  20260702150000_memory_core.sql  20260702170000_memory_contracts.sql  20260702200000_nested_memory_graphs.sql  20260703090000_ingestion_connectors.sql  20260704100000_claim_conflicts.sql
ops/: README.md
ops/admission/: capsulet-execution-policies.yaml
ops/load/: capacity-fixtures.example.json  capsulet-smoke.js
ops/observability/: README.md  capsulet-alerts.yaml  capsulet-dashboard-configmap.yaml
planning/: README.md
planning/backlog/: README.md  product-backlog.md  sprint-001-backlog.md  sprint-002-backlog.md  sprint-003-backlog.md  sprint-004-backlog.md  sprint-005-backlog.md  sprint-006-backlog.md  sprint-007-backlog.md  sprint-008-backlog.md  (+2 more)
scripts/: check-openapi.ps1  compose-smoke.ps1  install-wasi-python.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/capsulet/: __init__.py  client.py  workflow.py
sdk/python/tests/: test_client.py  test_workflow.py
(+87 files in other folders)
