[workspace]
members = [
    "crates/api",
    "crates/cli",
    "crates/core",
    "crates/evaluator",
    "crates/postgres",
    "crates/runner",
    "crates/scheduler",
    "crates/storage",
    "crates/worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mohripan16/capsulet"
rust-version = "1.96"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
http-body-util = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "migrate", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
