[workspace]
members = [
    "crates/api",
    "crates/cli",
    "crates/core",
    "crates/evaluator", "crates/observability",
    "crates/postgres",
    "crates/runner",
    "crates/scheduler",
    "crates/storage",
    "crates/worker",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mohripan16/capsulet"
rust-version = "1.96"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
chrono = "0.4"
chrono-tz = "0.10.4"
cron = "0.17.0"
http-body-util = "0.1"
hmac = "0.12"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "json", "migrate", "macros"] }
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.5", features = ["util"] }
