[package]
name = "capsulet-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HTTP control plane service for Capsulet."

[[bin]]
name = "capsulet-api"
path = "src/main.rs"

[dependencies]
async-trait.workspace = true
axum.workspace = true
capsulet-core = { path = "../core" }
capsulet-postgres = { path = "../postgres" }
capsulet-storage = { path = "../storage" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
http-body-util.workspace = true
serde_json.workspace = true
tower.workspace = true

[lints]
workspace = true
