[package]
name = "capsulet-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "HTTP control plane service for Capsulet."

[[bin]]
name = "capsulet-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
async-stream = "0.3"
axum.workspace = true
hmac.workspace = true
jsonwebtoken.workspace = true
capsulet-application = { path = "../application" }
capsulet-core = { path = "../core" }
capsulet-postgres = { path = "../postgres" }
capsulet-storage = { path = "../storage" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http = { version = "0.7.0", features = ["trace", "timeout", "compression-full", "limit", "cors"] }
tower_governor = "0.8.0"
tower = { workspace = true, features = ["limit"] }
capsulet-observability = { version = "0.1.0", path = "../observability" }
uuid = { version = "1.23.3", features = ["v4"] }

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true

[lints]
workspace = true
