[package]
name = "capsulet-application"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Application services and ports for Capsulet."

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
capsulet-core = { path = "../core" }
capsulet-observability = { version = "0.1.0", path = "../observability" }
capsulet-runner = { path = "../runner" }
capsulet-storage = { path = "../storage" }
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
