[package]
name = "capsulet-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Command-line client for Capsulet."

[[bin]]
name = "capsulet"
path = "src/main.rs"

[dependencies]
capsulet-core = { path = "../core" }

[lints]
workspace = true
