[package]
name = "capsulet-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core domain model for Capsulet."

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true

[lints]
workspace = true
