[package]
name = "capsulet-evaluator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Automation condition evaluator service for Capsulet."

[[bin]]
name = "capsulet-evaluator"
path = "src/main.rs"

[dependencies]
capsulet-core = { path = "../core" }

[lints]
workspace = true
