[package]
name = "capsulet-evaluator"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Automation condition evaluator service for Capsulet."

[[bin]]
name = "capsulet-evaluator"
path = "src/main.rs"

[dependencies]
axum.workspace = true
capsulet-core = { path = "../core" }
capsulet-postgres = { path = "../postgres" }
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
