[package]
name = "capsulet-observability"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
metrics = "0.24.6"
metrics-exporter-prometheus = "0.18.3"
opentelemetry = "0.32.0"
opentelemetry-otlp = "0.32.0"
opentelemetry_sdk = { version = "0.32.1", features = ["rt-tokio"] }
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
uuid = { version = "1.23.3", features = ["v4"] }

[lints]
workspace = true
