[package]
name = "capsulet-postgres"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "PostgreSQL persistence adapter for Capsulet."

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
capsulet-core = { path = "../core" }
capsulet-application = { path = "../application" }
sqlx.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]

[lints]
workspace = true
