[package]
name = "capsulet-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Execution runner boundary for future Kubernetes Job execution."

[[bin]]
name = "capsulet-runner"
path = "src/main.rs"

[dependencies]
capsulet-core = { path = "../core" }

[lints]
workspace = true
