[package]
name = "capsulet-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Execution runner boundary for future Kubernetes Job execution."

[[bin]]
name = "capsulet-runner"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
capsulet-core = { path = "../core" }
thiserror.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
