[package]
name = "capsulet-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Execution runner boundary for future Kubernetes Job execution."

[[bin]]
name = "capsulet-runner"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
base64 = "0.22"
capsulet-core = { path = "../core" }
k8s-openapi = { version = "0.26.1", features = ["latest"] }
kube = { version = "2.0.1", default-features = false, features = ["client", "config", "rustls-tls"] }
serde.workspace = true
serde_yaml = "0.9"
tempfile = "3"
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "process", "time"] }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
