[package]
name = "capsulet-scheduler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Scheduler service for time-based and delayed automation events."

[[bin]]
name = "capsulet-scheduler"
path = "src/main.rs"

[dependencies]
capsulet-core = { path = "../core" }
capsulet-postgres = { path = "../postgres" }
tokio.workspace = true

[lints]
workspace = true
