[package]
name = "capsulet-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Object storage boundary and local adapter for Capsulet."

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
capsulet-core = { path = "../core" }
object_store = { version = "0.14", features = ["aws"] }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }

[lints]
workspace = true
