[package]
name = "capsulet-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Worker service that leases runs and creates Kubernetes Jobs."

[[bin]]
name = "capsulet-worker"
path = "src/main.rs"

[dependencies]
capsulet-core = { path = "../core" }

[lints]
workspace = true
