[package]
name = "capsulet-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Worker service that leases runs and creates Kubernetes Jobs."

[[bin]]
name = "capsulet-worker"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
async-trait.workspace = true
capsulet-core = { path = "../core" }
capsulet-postgres = { path = "../postgres" }
capsulet-runner = { path = "../runner" }
serde_yaml = "0.9"
thiserror.workspace = true
tokio.workspace = true

[lints]
workspace = true
