[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "capsulet"
version = "0.1.0"
description = "Python workflow authoring SDK for Capsulet"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Capsulet contributors" }]
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/capsulet"]
